5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4123/executions/1593_820.log
== TEST (2019-03-26 10:46:47) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

valor = input("Qual o valor do saque? ")

# Quantidade de notas de R$ 50
valor // 50 = notas_50

# Valor restante a ser sacado com notas menores que R$ 50
resto_50 = valor % 50

# Quantidade de notas de R$ 10
notas_10 = resto_50 // 10

# Valor restante a ser sacado com notas menores que R$ 50
resto_10 = resto_50 % 10

# Quantidade de notas de R$ 2
notas_2 = resto_10 // 2

print(int(notas_50))
print(int(notas_10))
print(int(notas_2))

-- ERROR:
File "XXXX", line 8
    valor // 50 = notas_50
    ^
SyntaxError: can't assign to operator
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:47:11) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

valor = int(input("Qual o valor do saque? "))

# Quantidade de notas de R$ 50
valor // 50 = notas_50

# Valor restante a ser sacado com notas menores que R$ 50
resto_50 = valor % 50

# Quantidade de notas de R$ 10
notas_10 = resto_50 // 10

# Valor restante a ser sacado com notas menores que R$ 50
resto_10 = resto_50 % 10

# Quantidade de notas de R$ 2
notas_2 = resto_10 // 2

print(int(notas_50))
print(int(notas_10))
print(int(notas_2))

-- ERROR:
File "XXXX", line 8
    valor // 50 = notas_50
    ^
SyntaxError: can't assign to operator
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:47:51) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

valor = int(input("Qual o valor do saque? "))

# Quantidade de notas de R$ 50
notas_50 = valor // 50

# Valor restante a ser sacado com notas menores que R$ 50
resto_50 = valor % 50

# Quantidade de notas de R$ 10
notas_10 = resto_50 // 10

# Valor restante a ser sacado com notas menores que R$ 50
resto_10 = resto_50 % 10

# Quantidade de notas de R$ 2
notas_2 = resto_10 // 2

print(int(notas_50))
print(int(notas_10))
print(int(notas_2))

-- OUTPUT:
40
2
4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 10:48:01) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

valor = int(input("Qual o valor do saque? "))

# Quantidade de notas de R$ 50
notas_50 = valor // 50

# Valor restante a ser sacado com notas menores que R$ 50
resto_50 = valor % 50

# Quantidade de notas de R$ 10
notas_10 = resto_50 // 10

# Valor restante a ser sacado com notas menores que R$ 50
resto_10 = resto_50 % 10

# Quantidade de notas de R$ 2
notas_2 = resto_10 // 2

print(int(notas_50))
print(int(notas_10))
print(int(notas_2))

-- EXECUTION TIME:
0.186099
-- TEST CASE 1:
---- input:
2028
---- correct output:
40
2
4
---- user output:
40
2
4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
